--- a/Kelompok1session5.html
+++ b/Kelompok1session5.html
@@ -138,137 +138,137 @@
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th></th>
+                <th>Ada beberapa bagian tubuhku sering terasa panas,kesemutan atau seperti ada yang merayap</th>
               </tr>
               <tr>
-                <th><center>48</center></th>
+                <th><center>63</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>pada waktu bersama orang-orang aku merasa terganggu oleh suara-suara yang aneh</th>
+                <th>Aku tidak mengalami kesulitan membuang air besar atau menahannya</th>
               </tr>
               <tr>
-                <th><center>49</center></th>
+                <th><center>64</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Rasanya aku akan lebih baik apabila semua undang-undang ditiadakan</th>
+                <th>Aku kadang-kadang tetap bertahan pada suatu hal sehingga orang lain menjadi tidak sabar</th>
               </tr>
               <tr>
-                <th><center>50</center></th>
+                <th><center>65</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Rohku kadang-kadang meninggalkan tubuhku</th>
+                <th>Aku sayang pada ayahku</th>
               </tr>
               <tr>
-                <th><center>51</center></th>
+                <th><center>66</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Kesehatanku kurang lebih sama baiknya dengan kesehatan kawan-kawanku</th>
+                <th>Aku melihat ada mahluk atau benda di sekitarku yang tidak tampak oleh orang lin</th>
               </tr>
               <tr>
-                <th><center>52</center></th>
+                <th><center>67</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Bila Aku berpapasan dengan teman-teman sekolah atau kenalan lama,aku lebih suka menghindari mereka, kecuali bila mereka menegurku lebih dulu</th>
+                <th>Aku ingin dapat berbahagia seperti orang lain</th>
               </tr>
               <tr>
-                <th><center>53</center></th>
+                <th><center>68</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Seorang ulama(rohaniawan) dapat menyembuhkan dengan meletakan tangannya di dahi orang sakit dan berdoa</th>
+                <th>Aku hampir tidak pernah merasa sakit di tengkukku</th>
               </tr>
               <tr>
-                <th><center>54</center></th>
+                <th><center>69</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku disuakai oleh kebanyakan orang yang mengenalku</th>
+                <th>Aku sangat tertarik pada orang yang berjenis kelamin sama denganku</th>
               </tr>
               <tr>
-                <th><center>55</center></th>
+                <th><center>70</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku hamir takpenah terganggu rasa nyeri pada jantung dan dada</th>
+                <th>Aku suka bermain congklak (dakon)</th>
               </tr>
               <tr>
-                <th><center>56</center></th>
+                <th><center>71</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Selagi muda aku pernah dilarang masuk sekolah karena kebrandalanku</th>
+                <th>Aku kira banyak orang suka melebih-lebihkan kemalangannya untuk memperoleh simpati dan pertolongan orang lain</th>
               </tr>
               <tr>
-                <th><center>57</center></th>
+                <th><center>72</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku mudah Bergaul</th>
+                <th>Aku tiap-tiap kali terganggu oleh sakit ulu hati</th>
               </tr>
               <tr>
-                <th><center>58</center></th>
+                <th><center>73</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Segala sesuatu terjadi seperti yang diramalkan oleh Nabi - nabi</th>
+                <th>Aku orang penting</th>
               </tr>
               <tr>
-                <th><center>59</center></th>
+                <th><center>74</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku sering harus menerima perintah dari seseorang yang tidak lebih pandai dari pada aku</th>
+                <th>Aku sering ingin menjadi wanita(atau jika anda wanita) aku tidak pernah menyesal sebagai wanita</th>
               </tr>
               <tr>
-                <th><center>60</center></th>
+                <th><center>75</center></th>
                 <th><div class="checkbox">
                   <label>
                     <input type="checkbox" value="">
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku tidak membaca setiap tajuk rencana surat kabar harian</th>
+                <th>Aku kadang-kadang marah</th>
               </tr>
             </table>
           </div>
