--- a/Kelompok2session5.html
+++ b/Kelompok2session5.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <title>AdminLTE 2 | Dashboard</title>
+  <title>TestTime</title>
+  <link rel="icon" type="asset/image/png" href="asset/img/penting.png"/>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
   <!-- Bootstrap 3.3.7 -->
@@ -59,7 +60,7 @@
 
       <ul class="sidebar-menu" data-widget="tree">
         <li class="treeview">
-          <a href=# class="disable">
+          <a href=# ">
             <span>Kelompok Soal 1</span>
           </a>
           <ul class="treeview-menu">
@@ -84,7 +85,7 @@
           </li>
 
         <li class="treeview">
-          <a href="#" class="disable">
+          <a href="#" >
             <span>Kelompok Soal 3</span>
           </a>
           <ul class="treeview-menu">
