--- a/Kelompok3session2.html
+++ b/Kelompok3session2.html
@@ -63,21 +63,23 @@
             <span>Kelompok Soal 1</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 1</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="Kelompok1session1.html"><i class="fa fa-circle-o"></i>SUB 1</a></li>
+            <li><a href="Kelompok1session2.html"><i class="fa fa-circle-o"></i>SUB 2</a></li>
+            <li><a href="Kelompok1session3.html"><i class="fa fa-circle-o"></i>SUB 3</a></li>
+            <li><a href="Kelompok1session4.html"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="Kelompok1session5.html"><i class="fa fa-circle-o"></i>SUB 5</a></li>
           </ul>
         </li>
           <li class="treeview">
             <a href="#" class="disable">
-              <span>Kelompok SoalL 2</span>
+              <span>Kelompok Soal 2</span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="#"><i class="fa fa-circle-o"></i>SUB 1</a></li>
-              <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
-              <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
-              <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+              <li><a href="Kelompok2session1.html"><i class="fa fa-circle-o"></i>SUB 1</a></li>
+              <li><a href="Kelompok2session2.html"><i class="fa fa-circle-o"></i>SUB 2</a></li>
+              <li><a href="Kelompok2session3.html"><i class="fa fa-circle-o"></i>SUB 3</a></li>
+              <li><a href="Kelompok2session4.html"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+              <li><a href="Kelompok2session5.html"><i class="fa fa-circle-o"></i>SUB 5</a></li>
             </ul>
           </li>
 
@@ -86,10 +88,11 @@
             <span>Kelompok Soal 3</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 1</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 2</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 3</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="Kelompok3session1.html"><i class="fa fa-circle-o"></i>SUB 1</a></li>
+            <li><a href="Kelompok3session2.html"><i class="fa fa-circle-o"></i>SUB 2</a></li>
+            <li><a href="Kelompok3session3.html"><i class="fa fa-circle-o"></i>SUB 3</a></li>
+            <li><a href="Kelompok3session4.html"><i class="fa fa-circle-o"></i>SUB 4</a></li>
+            <li><a href="Kelompok3session5.html"><i class="fa fa-circle-o"></i>SUB 5</a></li>
           </ul>
         </li>
 
