--- a/Kelompok3session2.html
+++ b/Kelompok3session2.html
@@ -127,11 +127,11 @@
               <tr>
                 <th><center>165</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku ingin mengenal orang-orang penting, karena dengan demikian aku merasa menjadi orang penting  juga</th>
 
               </tr>
@@ -139,11 +139,11 @@
               <tr>
                 <th><center>166</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Bila melihat ke bawah dari tempat yang tinggi, aku menjadi takut</th>
 
               </tr>
@@ -151,11 +151,11 @@
               <tr>
                 <th><center>167</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak akan menjadi gelisah bila salah seorang anggota keluarga terlibat dalam perkara hokum</th>
 
               </tr>
@@ -163,11 +163,11 @@
                <tr>
                 <th><center>168</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Ada sesuatu yang tidak beres dengan pikiranku</th>
 
               </tr>
@@ -175,11 +175,11 @@
               <tr>
                 <th><center>169</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak takut mengurus uang</th>
 
               </tr>
@@ -187,11 +187,11 @@
               <tr>
                 <th><center>170</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak terganggu oleh apa yang orang  pikirkan tentang diriku</th>
 
               </tr>
@@ -199,11 +199,11 @@
               <tr>
                 <th><center>171</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku merasa canggung berbuat sesuatu  yang menonjolkan diri dalam pesta, walaupun orang lain melakukannya</th>
 
               </tr>
@@ -211,11 +211,11 @@
               <tr>
                 <th><center>172</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku sering harus berusaha keras untuk menyembunyikan rasa malu</th>
 
               </tr>
@@ -223,11 +223,11 @@
               <tr>
                 <th><center>173</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku dahulu senang bersekolah </th>
 
               </tr>
@@ -235,11 +235,11 @@
               <tr>
                 <th><center>174</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku belum pernah pingsan-pingsan</th>
 
               </tr>
@@ -247,11 +247,11 @@
               <tr>
                 <th><center>175</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku jarang atau tidak pernah menderita pusing(tujuh keliling)</th>
 
               </tr>
@@ -259,11 +259,11 @@
                <tr>
                 <th><center>176</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak terlampau takut terhadap ular</th>
 
               </tr>
@@ -271,11 +271,11 @@
               <tr>
                 <th><center>177</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Ibuku orang baik</th>
 
               </tr>
@@ -283,11 +283,11 @@
               <tr>
                 <th><center>178</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Daya ingatku baik-baik saja</th>
 
               </tr>
@@ -295,11 +295,11 @@
               <tr>
                 <th><center>179</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Masalah seks membuat aku rindu</th>
 
               </tr>
@@ -307,18 +307,30 @@
               <tr>
                 <th><center>180</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku sulit memulai percakapan, bila bertemu dengan orang yang baru ku kenal</th>
 
 
             </table>
           </div>
         </div>
-
+        <div class="form-group">
+          <div class="col-lg-12">
+            <div class="container ">
+              <div class="col-lg-9">
+              </div>
+              <div class="col-lg-3">
+                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+              </div>
+            <br>
+            <br>
+          </div>
+          </div>
+        </div>
       </div>
 
     </div>
