--- a/Kelompok3session1.html
+++ b/Kelompok3session1.html
@@ -125,33 +125,33 @@
               <tr>
                 <th><center>151</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Ada orang yang telah mencoba untuk meracuni aku</th>
 
               </tr>
               <tr>
                 <th><center>152</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Biasanya aku pergi tidur malam tanpa pikiran yang mengganggu</th>
 
               </tr>
               <tr>
                 <th><center>153</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Beberapa tahun akhir ini aku pada umumnya sehat-sehat aja</th>
 
               </tr>
@@ -159,22 +159,22 @@
               <tr>
                 <th><center>154</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Badanku tidak pernah sakit ayan atau kejang – kejang</th>
 
               </tr>
               <tr>
                 <th><center>155</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Berat dibadanku tetap saja, tidak naik maupun turun</th>
 
               </tr>
@@ -182,22 +182,22 @@
               <tr>
                 <th><center>156</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Adakalanya aku melakukan sesuatu yang kemudian tidak diketahui bahwa akulah yang melakukannya</th>
 
               </tr>
                <tr>
                 <th><center>157</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku merasa bahwa aku sering dihukum tanpa sebab</th>
 
               </tr>
@@ -205,11 +205,11 @@
                <tr>
                 <th><center>158</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku mudah menangis</th>
 
               </tr>
@@ -217,11 +217,11 @@
                <tr>
                 <th><center>159</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Bila membaca, daya tangkapku tidak sebaik dulu</th>
 
               </tr>
@@ -229,11 +229,11 @@
                <tr>
                 <th><center>160</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku merasa tidak pernah sesenang sekarang ini</th>
 
               </tr>
@@ -241,11 +241,11 @@
               <tr>
                 <th><center>161</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak cepat lelah</th>
 
               </tr>
@@ -253,11 +253,11 @@
               <tr>
                 <th><center>162</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku mendongkol bila orang dengan cerdik menipuku, sehingga aku harus mengakau kalah</th>
 
               </tr>
@@ -265,11 +265,11 @@
               <tr>
                 <th><center>163</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku tidak cepat lelah</th>
 
               </tr>
@@ -277,11 +277,11 @@
               <tr>
                 <th><center>164</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku suka mempelajari dan membaca tentang apa yang sedang ku kerjakan</th>
 
               </tr>
@@ -289,11 +289,11 @@
               <tr>
                 <th><center>165</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku ingin mengenal orang-orang penting, karena dengan demikian aku merasa menjadi orang penting  juga</th>
 
               </tr>
@@ -302,6 +302,19 @@
 
 
             </table>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+            <div class="container ">
+              <div class="col-lg-9">
+              </div>
+              <div class="col-lg-3">
+                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+              </div>
+            <br>
+            <br>
+          </div>
           </div>
         </div>
 
