--- a/Kelompok3session4.html
+++ b/Kelompok3session4.html
@@ -127,165 +127,165 @@
               <tr>
                 <th><center>196</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku suka mengunjungi tempat yang belum pernah kukunjungi</th>
 
               </tr>
               <tr>
                 <th><center>197</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Seseorang telah mencoba merampas barang-barangku</th>
 
               </tr>
               <tr>
                 <th><center>198</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku jarang sekali melamun</th>
 
               </tr>
               <tr>
                 <th><center>199</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Anak-anak seharusnya diberi pelajaran tentang seks</th>
 
               </tr>
               <tr>
                 <th><center>200</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Ada orang yang bermaksud mencoba mencuri buah pikiranku</th>
 
               </tr>
               <tr>
                 <th><center>201</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku ingin tidak pemalu seperti ini</th>
 
               </tr>
               <tr>
                 <th><center>202</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku percaya bahwa aku seorang yang terkutuk</th>
 
               </tr>
               <tr>
                 <th><center>203</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Andaikata aku seorang wartawan, aku akan senang sekali memberitahukan seni drama</th>
 
               </tr>
               <tr>
                 <th><center>204</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku ingin juga menjadi wartawan</th>
 
               </tr>
               <tr>
                 <th><center>205</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Adakalanya tidak mungkin bagiku untuk menahan diri dari keinginan mencuri atau mencopet</th>
 
               </tr>
               <tr>
                 <th><center>206</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku sangat taat pada agama (lebih dari pada orang lain) </th>
 
               </tr>
               <tr>
                 <th><center>207</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku suka bermacam-macam permainan dan hiburan</th>
 
               </tr>
               <tr>
                 <th><center>208</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku suka bercumbu</th>
 
               </tr>
               <tr>
                 <th><center>209</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Aku percaya dosaku tidak dapat diampuni</th>
 
               </tr>
               <tr>
                 <th><center>210</center></th>
                 <th><div class="checkbox">
-  <label>
-    <input type="checkbox" value="">
-    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-  </label>
-</div></th>
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></th>
                 <th>Semua rasanya sama saja</th>
 
               </tr>
@@ -294,7 +294,19 @@
             </table>
           </div>
         </div>
-
+        <div class="form-group">
+          <div class="col-lg-12">
+            <div class="container ">
+              <div class="col-lg-9">
+              </div>
+              <div class="col-lg-3">
+                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+              </div>
+            <br>
+            <br>
+          </div>
+          </div>
+        </div>
       </div>
 
     </div>
