button and href

--- a/Kelompok1session1.html
+++ b/Kelompok1session1.html
@@ -281,7 +281,7 @@
               <div class="col-lg-9">
               </div>
               <div class="col-lg-3">
-                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+                  <a href="Kelompok1session2.html" type="button" class="btn  btn-primary fa fa-arrow-right fa-lg">Next </a>
               </div>
             <br>
             <br>
