--- a/Kelompok1session4.html
+++ b/Kelompok1session4.html
@@ -282,7 +282,7 @@
               <div class="col-lg-9">
               </div>
               <div class="col-lg-3">
-                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+                  <a href="Kelompok1session5.html" type="button" class="btn  btn-primary fa fa-arrow-right fa-lg">Next </a>
               </div>
             <br>
             <br>
