--- a/Kelompok2session2.html
+++ b/Kelompok2session2.html
@@ -311,7 +311,7 @@
               <div class="col-lg-9">
               </div>
               <div class="col-lg-3">
-                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+                  <a href="Kelompok2session3.html" type="button" class="btn  btn-primary fa fa-arrow-right fa-lg">Next </a>
               </div>
             <br>
             <br>
