--- a/Kelompok3session3.html
+++ b/Kelompok3session3.html
@@ -299,7 +299,7 @@
               <div class="col-lg-9">
               </div>
               <div class="col-lg-3">
-                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+                  <a href="Kelompok3session4.html" type="button" class="btn  btn-primary fa fa-arrow-right fa-lg">Next </a>
               </div>
             <br>
             <br>
