--- a/Kelompok3session4.html
+++ b/Kelompok3session4.html
@@ -300,7 +300,7 @@
               <div class="col-lg-9">
               </div>
               <div class="col-lg-3">
-                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+                  <a href="Kelompok3session5.html" type="button" class="btn  btn-primary fa fa-arrow-right fa-lg">Next </a>
               </div>
             <br>
             <br>
