--- a/Halamanadmin.html
+++ b/Halamanadmin.html
@@ -134,7 +134,8 @@
               <i class="fa fa-user"></i> <span>Peserta</span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Tambah Peserta</a></li>
+              <li><a href="HalamanTambahPeserta.html"><i class="fa fa-circle-o"></i> Tambah Peserta</a></li>
+              <li><a href="HalamanPilihPeserta.html"><i class="fa fa-circle-o"></i> Pilih Peserta</a></li>
             </ul>
           </li>
 
@@ -143,8 +144,8 @@
             <i class="fa fa-file-o"></i> <span>Soal Test</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Tambah Soal</a></li>
-            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Pilih Soal</a></li>
+            <li><a href="HalamanTambahSoal.html"><i class="fa fa-circle-o"></i> Tambah Soal</a></li>
+            <li><a href="HalamanPilihSoal.html"><i class="fa fa-circle-o"></i> Pilih Soal</a></li>
           </ul>
         </li>
 
