--- a/halamanPilihSoal.html
+++ b/halamanPilihSoal.html
@@ -133,7 +133,8 @@
               <i class="fa fa-user"></i> <span>Peserta</span>
             </a>
             <ul class="treeview-menu">
-              <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Tambah Peserta</a></li>
+              <li><a href="HalamanTambahPeserta.html"><i class="fa fa-circle-o"></i> Tambah Peserta</a></li>
+              <li><a href="HalamanPilihPeserta.html"><i class="fa fa-circle-o"></i> Pilih Peserta</a></li>
             </ul>
           </li>
 
@@ -142,17 +143,17 @@
             <i class="fa fa-file-o"></i> <span>Soal Test</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Tambah Soal</a></li>
-            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Pilih Soal</a></li>
+            <li><a href="HalamanTambahSoal.html"><i class="fa fa-circle-o"></i> Tambah Soal</a></li>
+            <li><a href="HalamanPilihSoal.html"><i class="fa fa-circle-o"></i> Pilih Soal</a></li>
           </ul>
         </li>
 
       <li class="treeview">
         <a href="#">
-          <i class="fa  fa-bar-chart"></i> <span>Jawaban Peserta</span>
+          <i class="fa  fa-bar-chart"></i> <span>Hasil Tes</span>
         </a>
         <ul class="treeview-menu">
-          <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Hasil Jawaban</a></li>
+          <li><a href="HalamanJawabanPeserta.html"><i class="fa fa-circle-o"></i> Hasil Jawaban</a></li>
         </ul>
       </li>
 
