--- a/HalamanPilihPeserta.html
+++ b/HalamanPilihPeserta.html
@@ -211,6 +211,9 @@
     </div>
 
     <div class="box-body">
+      <div class="box-header">
+       <h3 class="box-title">DAFTAR PESERTA</h3>
+      </div>
             <table class="text-center">
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
