--- a/halamanPilihSoal.html
+++ b/halamanPilihSoal.html
@@ -182,9 +182,9 @@
                     <div class="form-group">
                       <label>Kelompok Soal</label>
                       <select class="form-control">
-                        <option>Matematika</option>
+                        
                         <option>Psikotes</option>
-                        <option>Fisika</option>
+                        
                       </select>
                     </div>
                   </div>
@@ -226,24 +226,39 @@
                 </thead>
                 <tbody>
                 <tr>
-                  <td><input type="checkbox"></td>
+                  <td><div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></td>
                   <td>1</td>
-                  <td>Apa nama ibukota Negara Indonesia ?</td>
+                  <td>Aku suka majalah tehnik/td>
                   <td>Pilihan ganda</td>
 
                 </tr>
                 <tr>
-                  <td><input type="checkbox"></td>
+                  <td><div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></td>
                   <td>2</td>
-                  <td>Apa saja nama suku yang ada di Pulau Kalimantan ?</td>
-                  <td>Uraian</td>
+                  <td>Nafsu makanku baik</td>
+                  <td>Pilihan Ganda</td>
 
                 </tr>
                 <tr>
-                  <td><input type="checkbox"></td>
+                  <td><div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="">
+                    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                  </label>
+                </div></td>
                   <td>3</td>
-                  <td>Apa nama mata uang Negara Indonesia ?</td>
-                  <td>Uraian</td>
+                  <td>Aku bangun dengan rasa nyaman hampir setiap pagi</td>
+                  <td>Pilihan Ganda</td>
 
                 </tr>
 
@@ -262,7 +277,7 @@
 
                   <th>NO</th>
                   <th>SOAL</th>
-                  <th>JENIS SOAL</th>
+                  <th>KELOMPOK SOAL</th>
                   <th>KELOMPOK SUB</th>
 
                 </tr>
@@ -271,24 +286,24 @@
                 <tr>
 
                   <td>1</td>
-                  <td>Apa nama ibukota Negara Indonesia ?</td>
-                  <td>Pilihan ganda</td>
+                  <td>Aku suka majalah tehnik</td>
+                  <td>KELOMPOK 1</td>
                   <th>SUB 1</th>
 
                 </tr>
                 <tr>
 
                   <td>2</td>
-                  <td>Apa saja nama suku yang ada di Pulau Kalimantan ?</td>
-                  <td>Uraian</td>
+                  <td>Nafsu makanku baik</td>
+                  <td>KELOMPOK 2</td>
                   <th>SUB 2</th>
 
                 </tr>
                 <tr>
 
                   <td>3</td>
-                  <td>Apa nama mata uang Negara Indonesia ?</td>
-                  <td>Uraian</td>
+                  <td>Aku bangun dengan rasa nyaman hampir setiap pagi</td>
+                  <td>KELOMPOK 3</td>
                   <th>SUB 3</th>
 
                 </tr>
