--- a/Kelompok1session2.html
+++ b/Kelompok1session2.html
@@ -220,7 +220,7 @@
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>aku ingin menjadi penyanyi</th>
+                <th>Aku ingin menjadi penyanyi</th>
               </tr>
               <tr>
                 <th><center>26</center></th>
