--- a/Kelompok1session3.html
+++ b/Kelompok1session3.html
@@ -212,7 +212,7 @@
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>kadang-kadang aku ingin membanting barang-barang</th>
+                <th>Kadang-kadang aku ingin membanting barang-barang</th>
               </tr>
               <tr>
                 <th><center>40</center></th>
