--- a/Kelompok1session4.html
+++ b/Kelompok1session4.html
@@ -151,7 +151,7 @@
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>pada waktu bersama orang-orang aku merasa terganggu oleh suara-suara yang aneh</th>
+                <th>Pada waktu bersama orang-orang aku merasa terganggu oleh suara-suara yang aneh</th>
               </tr>
               <tr>
                 <th><center>49</center></th>
