menghilangkan blok bagian 2

--- a/Kelompok2session5.html
+++ b/Kelompok2session5.html
@@ -73,7 +73,7 @@
           </ul>
         </li>
           <li class="treeview">
-            <a href="#" class="disable">
+            <a href="#"">
               <span>Kelompok Soal 2</span>
             </a>
             <ul class="treeview-menu">
@@ -86,7 +86,7 @@
           </li>
 
         <li class="treeview">
-          <a href="#" class="disable">
+          <a href="#" >
             <span>Kelompok Soal 3</span>
           </a>
           <ul class="treeview-menu">
